--- a/ZStack/Projects/zstack/Tools/CC2430DB/f8wConfig.cfg
+++ b/ZStack/Projects/zstack/Tools/CC2430DB/f8wConfig.cfg
@@ -94,8 +94,8 @@
 -DNWK_INDIRECT_MSG_TIMEOUT=7
 
 /* no. of simultaneous route discoveries in network */
--DMAX_RREQ_ENTRIES=10
-
+/*-DMAX_RREQ_ENTRIES=10*/
+-DMAX_RREQ_ENTRIES=5
 /* The maximum number of retries allowed after a transmission failure */
 -DAPSC_MAX_FRAME_RETRIES=3
 
@@ -108,20 +108,20 @@
  */
 -DMAX_POLL_FAILURE_RETRIES=2
 
-/* The number of items in the broadcast table */
--DMAX_BCAST=9
+/* The number of items in the broadcast table default 9*/
+-DMAX_BCAST=2
 
-/* The maximum number of groups in the groups table */
--DAPS_MAX_GROUPS=16
+/* The maximum number of groups in the groups table default 16*/
+-DAPS_MAX_GROUPS=2
 
 /* no. of entries in the regular routing table plus additional
- * entries for route repair
+ * entries for route repair ,org 20
  */
--DMAX_RTG_ENTRIES=20
+-DMAX_RTG_ENTRIES=5
 
 /* Maximum number of entries in the Binding table. */
--DNWK_MAX_BINDING_ENTRIES=10
-
+/*-DNWK_MAX_BINDING_ENTRIES=10*/
+-DNWK_MAX_BINDING_ENTRIES=2
 /* Maximum number of cluster IDs for each binding table entry. */
 -DMAX_BINDING_CLUSTER_IDS=5
 
