--- a/trunk/ZStack/Projects/zstack/Tools/CC2430DB/f8wConfig.cfg
+++ b/trunk/ZStack/Projects/zstack/Tools/CC2430DB/f8wConfig.cfg
@@ -135,20 +135,21 @@
  * The following are for End Devices only
  ***************************************/
 
--DRFD_RCVC_ALWAYS_ON=FALSE
+/*-DRFD_RCVC_ALWAYS_ON=FALSE*/
+-DRFD_RCVC_ALWAYS_ON=TRUE
 
 /* The number of millisecondss to wait between data request polls to the coordinator. */
--DPOLL_RATE=1000
+-DPOLL_RATE=0
 
 /* This is used after receiving a data indication to poll immediately
  * for queued messages...in milliseconds.
  */
--DQUEUED_POLL_RATE=100
+-DQUEUED_POLL_RATE=0
 
 /* This is used after receiving a data confirmation to poll immediately
  * for response messages...in milliseconds
  */
--DRESPONSE_POLL_RATE=100
+-DRESPONSE_POLL_RATE=0
 
 /* This is used as an alternate response poll rate only for rejoin request.
  * This rate is determined by the response time of the parent that the device
